--- a/twentythirteen-www-tg/style.css
+++ b/twentythirteen-www-tg/style.css
@@ -119,6 +119,9 @@ h6 {
   line-height: 1.3;
   font-weight: bold;
 }
+html {
+  font-size: 62.5%;
+}
 /**
  * Header
  * -----------------------------------------------------------------------------
@@ -269,15 +272,16 @@ h6 {
   background-color: white;
 }
 #text_simply h2 {
-  font-size: 2.375em;
+  font-size: 38px;
+  font-size: 3.8rem;
   color: #4d4d4d;
   margin: 0;
 }
 #text_simply p {
-  font-size: 1.375em;
-  line-height: 1.375em;
-  color: #666;
-  margin: 0;
+  font-size: 20px;
+  font-size: 2rem;
+  line-height: 20px;
+  line-height: 2rem;
 }
 #button_simply {
   /*    position:absolute;
@@ -285,17 +289,21 @@ h6 {
         top: 80%;*/
   margin-left: 140px;
   font-weight: bold;
-  font-size: 1.875em;
+  font-size: 30px;
+  font-size: 3rem;
   padding: 10px 20px 6px;
 }
 #accessibility_fast h2 {
   margin-top: 400px;
-  font-size: 2.687em;
+  font-size: 43px;
+  font-size: 4.3rem;
   color: #4d4d4d;
 }
 #accessibility_fast p {
-  font-size: 1.250em;
-  line-height: 1.250em;
+  font-size: 20px;
+  font-size: 2rem;
+  line-height: 20px;
+  line-height: 2rem;
   color: #666;
   max-width: 42.125em;
   margin-bottom: 60px;
@@ -308,12 +316,14 @@ h6 {
   color: white;
 }
 #technology h2 {
-  font-size: 1.75em;
+  font-size: 28px;
+  font-size: 2.8rem;
   color: #4d4d4d;
   margin-bottom: 70px;
 }
 #technology h3 {
-  font-size: 1.437em;
+  font-size: 23px;
+  font-size: 2.3rem;
   margin-bottom: 10px;
   color: #666;
   margin-top: 0;
@@ -327,8 +337,10 @@ h6 {
 }
 #technology p {
   color: #666;
-  font-size: 1.125em;
-  line-height: 1.375;
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 22px;
+  line-height: 2.2rem;
   margin-bottom: 0;
 }
 #techno1,
@@ -338,7 +350,8 @@ h6 {
 }
 #button_technology {
   font-weight: bold;
-  font-size: 1.625em;
+  font-size: 20px;
+  font-size: 2rem;
   padding: 10px 20px 6px;
 }
 #why {
@@ -361,12 +374,14 @@ h6 {
   padding: 150px 0 180px 0;
 }
 #why h2 {
-  font-size: 1.75em;
+  font-size: 28px;
+  font-size: 2.8rem;
   color: #4d4d4d;
   background: white;
 }
 #why h3 {
-  font-size: 1.437em;
+  font-size: 23px;
+  font-size: 2.3rem;
   margin-bottom: 5px;
   color: #666;
 }
@@ -380,8 +395,10 @@ h6 {
 #why p {
   margin-bottom: 0;
   color: #666;
-  font-size: 1.125em;
-  line-height: 1.375;
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 22px;
+  line-height: 2.2rem;
   text-align: left;
 }
 #steps {
@@ -389,23 +406,28 @@ h6 {
 }
 #steps h2 {
   color: #4d4d4d;
-  font-size: 2.812em;
-  line-height: 1,25em;
-  margin: 0;
+  font-size: 45px;
+  font-size: 4.5rem;
+  line-height: 20px;
+  line-height: 2rem;
+  margin: 0 0 30px 0;
 }
 #steps p {
   color: #666666;
-  font-size: 1,25em;
-  line-height: 1,25em;
-  margin-top: 5px;
+  font-size: 20px;
+  font-size: 2rem;
+  line-height: 20px;
+  line-height: 2rem;
 }
 #steps ol {
   margin: 20px 0 50px 0;
 }
 #steps li {
   color: #666666;
-  font-size: 1.062em;
-  line-height: 1.312em;
+  font-size: 17px;
+  font-size: 1.7rem;
+  line-height: 21px;
+  line-height: 2.1rem;
   text-align: center;
 }
 #references {
@@ -416,14 +438,18 @@ h6 {
 }
 #references h2 {
   color: #4d4d4d;
-  font-size: 2.812em;
-  line-height: 1,25em;
+  font-size: 45px;
+  font-size: 4.5rem;
+  line-height: 20px;
+  line-height: 2rem;
   margin-bottom: 0;
 }
 #references p {
   color: #666666;
-  font-size: 1,25em;
-  line-height: 1,25em;
+  font-size: 20px;
+  font-size: 2rem;
+  line-height: 20px;
+  line-height: 2rem;
 }
 .center {
   text-align: center;
@@ -448,7 +474,8 @@ h6 {
 }
 #button_evaluate {
   font-weight: bold;
-  font-size: 1.625em;
+  font-size: 26px;
+  font-size: 2.6rem;
   padding: 10px 20px 6px;
 }
 .button {
