header roughly OK

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -10,11 +10,59 @@
 .navbar {background-color: #efefef;}
 
 // header background
-#masthead {.radial-gradient(#00d9f0;#008594);}
-.site-header .home-link {
+
+
+
+.red_line {border-top: 0.5rem solid #e4420d;}
+
+#masthead {
+
+    max-width: 96rem;
+    min-height: 10.5rem;
+
+    margin : auto;
+    p {margin: 0;}
+    ul {
+        text-align: right;
+        padding: 0;
+        background-color: #fff;
+    }
+}
+
+#logo {
+    float: left;
+    color: #4d4d4d;
+    h2 {margin:5px 0 0 0;}
+}
+
+
+#navbar {
+    .my-font-size(15); //15px
+    font-family: montserrat;
+    font-weight: normal;
+    color: #4d4d4d;
+    background-color: #fff;
+    margin-top: 10px;
+    width: 600px;
+    float: right;
+    li a {padding: 10px}
+}
+
+/*.site-header .home-link {
     background: url(Images/bg-noise.png) repeat top left;
     background: url(Images/Montagnes.png) no-repeat bottom right;
+}*/
+
+#button_my_tanaguru {
+    .my-font-size(14); //14px
+    font-size: open_sans;
+    font-weight: normal;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-left: 77rem;  
+    border-radius: 0 0 4px 4px;
 }
+
 
 /**
  * Footer 
