Homepage: add folder for background images and new RSD for section steps

--- a/twentythirteen-www-tg/Less/bits.less
+++ b/twentythirteen-www-tg/Less/bits.less
@@ -19,22 +19,22 @@
 @gradient-red-end:   #D61119;
 
 // tg_why multiple background
-@img1url-why : url(Images/why_line.png); 
+@img1url-why : url(Images/Background/why_line.png); 
 @img1repeat-why : no-repeat; 
 @img1pos-why : top center;
-@img2url-why : url(Images/why_line_repeat.png);  ; 
+@img2url-why : url(Images/Background/why_line_repeat.png);  ; 
 @img2repeat-why : repeat-x; 
 @img2pos-why : top; 
-@img3url-why : url(Images/why_mountains.png); 
+@img3url-why : url(Images/Background/why_mountains.png); 
 @img3repeat-why : no-repeat; 
 @img3pos-why : bottom center;
-@img4url-why : url(Images/why_mountains_repeat.png); 
+@img4url-why : url(Images/Background/why_mountains_repeat.png); 
 @img4repeat-why : repeat-x; 
 @img4pos-why : bottom;
-@img5url-why : url(Images/grid.png); 
+@img5url-why : url(Images/Background/grid.png); 
 @img5repeat-why : repeat; 
 @img5pos-why : 50% 52%;
-@img6url-why : url(Images/bg-noise.png); 
+@img6url-why : url(Images/Background/bg-noise.png); 
 @img6repeat-why : repeat; 
 @img6pos-why : 50% 50%;
 
