Header: Solved display menu problem in RWD

--- a/twentythirteen-www-tg/Less/global.less
+++ b/twentythirteen-www-tg/Less/global.less
@@ -23,11 +23,13 @@
     margin : auto;
     p {margin: 0;}
     ul {
-        text-align: right;
+/*        text-align: right;*/
         padding: 0;
         background-color: #fff;
     }
 }
+
+    #button_my_tanaguru {margin-left: 80%;} //77rem
 
 #logo {
     float: left;
@@ -44,7 +46,7 @@
     background-color: #fff;
     /*    margin-top: 10px;
         width: 600px;*/
-    float: right;
+/*    float: right;*/
     li a {padding: 10px}
 }
 
@@ -338,7 +340,7 @@
 
 @media screen and (min-width: 1040px) {
 
-    #button_my_tanaguru {margin-left: 77rem;} 
+/*    #button_my_tanaguru {margin-left: 77rem;} //77rem*/
 
     .widget {padding: 0 0.5% 5px;}
 
@@ -527,4 +529,11 @@
     #why3 {
         background-color: white;
     }
+}
+
+@media (min-width: 644px) {
+    #masthead {
+        ul{text-align: right;}
+    }   
+    #navbar {float: right;}
 }
